re PR tree-optimization/27332 (ICE in try_interchange_loops with -ftree-loop-linear)

PR middle-end/27332
	* tree-loop-linear.c (try_interchange_loops): Test for 
	no data dependences.

From-SVN: r113856